--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,10 @@
-aniso8601==8.1.0
-attrs==20.3.0
-click==7.1.2
-Flask==1.1.2
-flask-marshmallow==0.14.0
-flask-restplus==0.13.0
-Flask-SQLAlchemy==2.4.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jsonschema==3.2.0
-MarkupSafe==1.1.1
-marshmallow==3.9.1
-marshmallow-sqlalchemy==0.24.1
-pyrsistent==0.17.3
-pytz==2020.4
-six==1.15.0
-SQLAlchemy==1.3.20
-Werkzeug==0.16.1
-zipp==3.4.0
+click==8.0.3
+Flask==2.0.2
+gunicorn==20.1.0
+importlib-metadata==4.8.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+typing-extensions==4.0.1
+Werkzeug==2.0.2
+zipp==3.6.0
